  [Michele Simionato]
  * Extended the RtreeFilter to work on all sources; removed the Tile class
  * Introduced an optional RtreeFilter for fast filtering of the sites by
    point sources, based on the source bounding box

  [Graeme Weatherill]
  * Adds/Modifies Ry0 and Rx calculator for multi-surface typology using the Generalized Coordinate System (GC2)
  * Implements the European GMPE of Kotha et al. (2016), the SaRotD100 GMPE of Hong & Goda (2007) and the Arias Intensity GMPE of Trvasarou et al. (2003)

  [Michele Simionato]
  * The `SourceSitesFilter` is now used by default in `pmap_from_grp`
  * Added a simple argument parser in baselib
  * Replaced pydoc.locate with a call to importlib to work around a QGIS issue
  * Fixed the encode/decode functions in baselib.python3compat

  [Daniele Viganò]
  * Added Python 3 compatibility to speedups

  [Trevor Allen/Graeme Weatherill]
  * Adds Queen Charlotte strike slip magnitude scaling relation (WC1994_QCSS)

python-oq-hazardlib (0.20.0-0~precise01) precise; urgency=low
  [Yen-Shin Chen]
  * Fixed the rupture count in simple fault while multiple hypocenter locations or slip directions assigned.

  [Michele Simionato]
  * Fixed the serialization on HDF5 of dictionaries with keys containing slashes
  * Renamed Imtls -> DictArray
  * Removed the .id attribute from the Site class

  [Graeme Weatherill]
  * Updates coefficients to Montalva et al. GMPE and updates year to 2016

  [Michele Simionato]
  * Added a Tile class to filter efficiently point sources
  * Removed the function `hazard_curve.hazard_curves` that has been
    deprecated from November 2014
  * Fixed the string representation of GSIM instances: this solves a serious
    bug in the GMPETable
  * Removed the rupture_site_filter where it was not used

  [Daniele Viganò]
  * Added support for Ubuntu 16.04 (xenial) packages

  [Michele Simionato]
  * Major change to the GmfCalculator API

  [Matteo Nastasi]