@@ -1,5 +1,26 @@
-from openquake.hazardlib.scalerel.leonard2014 import Leonard2014_SCR, Leonard2014_Interplate
+# -*- coding: utf-8 -*-
+# vim: tabstop=4 shiftwidth=4 softtabstop=4
+#
+# Copyright (C) 2012-2016 GEM Foundation
+#
+# OpenQuake is free software: you can redistribute it and/or modify it
+# under the terms of the GNU Affero General Public License as published
+# by the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# OpenQuake is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU Affero General Public License for more details.
+#
+# You should have received a copy of the GNU Affero General Public License
+# along with OpenQuake. If not, see <http://www.gnu.org/licenses/>.
+
+
+from openquake.hazardlib.scalerel.leonard2014 import (Leonard2014_SCR,
+                                                      Leonard2014_Interplate)
 from openquake.hazardlib.tests.scalerel.msr_test import BaseMSRTestCase
+
 
 class Leonard2014_SCRTestCase(BaseMSRTestCase):
     """
@@ -47,7 +68,22 @@ class Leonard2014_SCRTestCase(BaseMSRTestCase):
         self._test_get_median_mag(6600.0, 0, 7.99954, places=5)
         self._test_get_median_mag(6600.0, 90, 8.00954, places=5)
 
-class Leonard2014_InterplateTestCase(BaseMSRTestCase):
+    def test_stddev_area(self):
+        """
+        Tests the standard deviation for area.
+        Trivial result - included only for coverage
+        """
+        self.assertAlmostEqual(self.msr.get_std_dev_area(6.0, 0.0), 0.0)
+
+    def test_stddev_mag(self):
+        """
+        Tests the standard deviation for magnitude.
+        Trivial result - included only for coverage
+        """
+        self.assertAlmostEqual(self.msr.get_std_dev_mag(1000.0, 0.0), 0.0)
+
+
+class Leonard2014_InterplateTestCase(Leonard2014_SCRTestCase):
     """
     Tests the scaling relationship Leonard2014 for Interplate Regions
 
