@@ -1,3 +1,7 @@
+  [Jonathan Griffin/Graeme Weatherill]
+  * Adds Leonard (2014) magnitude-area scaling relation
+  * Cleanup of scaling relation test code, removes fragile tests of the get_available_scalerel function
+
   [Michele Simionato]
   * Extended the RtreeFilter to work on all sources; removed the Tile class
   * Introduced an optional RtreeFilter for fast filtering of the sites by
